force-app/main/default/objects/Oportunidad__c/fields/Actualizar_Estado__c.field-meta.xml
<CustomField>
    <fullName>Actualizar_Estado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actualizar Estado</label>
    <type>Checkbox</type>
</CustomField>