force-app/main/default/objects/Oportunidad__c/fields/AP_C_SME__c.field-meta.xml
<CustomField>
    <fullName>AP_C_SME__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indica que oportunidades vienen de piratería</inlineHelpText>
    <label>AP&amp;C</label>
    <type>Checkbox</type>
</CustomField>