force-app/main/default/objects/Oportunidad__c/fields/Area_de_negocio_N1__c.field-meta.xml
<CustomField>
    <fullName>Area_de_negocio_N1__c</fullName>
    <label>Área de negocio N1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>