force-app/main/default/objects/Oportunidad__c/fields/Area_de_negocio_N2__c.field-meta.xml
<CustomField>
    <fullName>Area_de_negocio_N2__c</fullName>
    <label>Área de negocio N2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>