force-app/main/default/objects/Oportunidad__c/fields/Auxiliar_Delivery_Center__c.field-meta.xml
<CustomField>
    <fullName>Auxiliar_Delivery_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auxiliar Delivery Center</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades8</relationshipName>
    <type>Lookup</type>
</CustomField>