force-app/main/default/objects/Oportunidad__c/fields/Borrado_Logico__c.field-meta.xml
<CustomField>
    <fullName>Borrado_Logico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Borrado Lógico</label>
    <type>Checkbox</type>
</CustomField>