force-app/main/default/objects/Oportunidad__c/fields/BusinessDeveloper__c.field-meta.xml
<CustomField>
    <fullName>BusinessDeveloper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BusinessDeveloper</relationshipName>
    <type>Lookup</type>
</CustomField>