force-app/main/default/objects/Oportunidad__c/fields/C_digo_proyecto_Servicio_Atenea__c.field-meta.xml
<CustomField>
    <fullName>C_digo_proyecto_Servicio_Atenea__c</fullName>
    <label>Codigo Propuesto Servicio Atenea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>