force-app/main/default/objects/Oportunidad__c/fields/Campanya__c.field-meta.xml
<CustomField>
    <fullName>Campanya__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña</label>
    <referenceTo>Campaing__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>