force-app/main/default/objects/Oportunidad__c/fields/Canal_de_anuncio__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_anuncio__c</fullName>
    <description>Canal por el que es publicada la oferta</description>
    <inlineHelpText>Canal por el que es publicada la oferta/licitación</inlineHelpText>
    <label>Canal de anuncio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plataforma de Contratación</fullName>
            </value>
            <value>
                <fullName>Publicación Oficial</fullName>
            </value>
            <value>
                <fullName>Publicación web</fullName>
            </value>
            <value>
                <fullName>Invitación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>