force-app/main/default/objects/Oportunidad__c/fields/CCI_valor__c.field-meta.xml
<CustomField>
    <fullName>CCI_valor__c</fullName>
    <label>CCI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>