force-app/main/default/objects/Oportunidad__c/fields/CECO__c.field-meta.xml
<CustomField>
    <fullName>CECO__c</fullName>
    <label>CECO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>