force-app/main/default/objects/Oportunidad__c/fields/Centro__c.field-meta.xml
<CustomField>
    <fullName>Centro__c</fullName>
    <label>Centro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>