force-app/main/default/objects/Oportunidad__c/fields/Clase_de_oferta__c.field-meta.xml
<CustomField>
    <fullName>Clase_de_oferta__c</fullName>
    <label>Clase de oferta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>-</fullName>
                <isActive>false</isActive>
                <label>-</label>
            </value>
            <value>
                <fullName>Acuerdo Marco</fullName>
                <isActive>false</isActive>
                <label>Acuerdo Marco / SDA</label>
            </value>
            <value>
                <fullName>Acuerdo Marco Privado</fullName>
                <label>Acuerdo Marco / SDA Privado</label>
            </value>
            <value>
                <fullName>Acuerdo Marco Público</fullName>
                <label>Acuerdo Marco / SDA Público</label>
            </value>
            <value>
                <fullName>Ampliación de Contrato</fullName>
            </value>
            <value>
                <fullName>Información Previa</fullName>
            </value>
            <value>
                <fullName>Invitación Acuerdo Marco</fullName>
                <label>Invitación Acuerdo Marco / SDA</label>
            </value>
            <value>
                <fullName>Invitación Pública</fullName>
            </value>
            <value>
                <fullName>Licitación Pública</fullName>
            </value>
            <value>
                <fullName>Oferta interco</fullName>
            </value>
            <value>
                <fullName>Petición EOI / Pre-Calificación</fullName>
            </value>
            <value>
                <fullName>Privada</fullName>
            </value>
            <value>
                <fullName>Pública</fullName>
            </value>
            <value>
                <fullName>Registro Proveedores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>