force-app/main/default/objects/Oportunidad__c/fields/Clasificacion_funcional_Nivel_1ID__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion_funcional_Nivel_1ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clasificacion_funcional_Nivel_1ID</label>
    <referenceTo>Parametrica__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>