force-app/main/default/objects/Oportunidad__c/fields/Clasificacion_funcional_Nivel_1IDValue__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion_funcional_Nivel_1IDValue__c</fullName>
    <formula>Clasificacion_funcional_Nivel_1ID__r.Valor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clasificacion_funcional_Nivel_1IDValue</label>
    <type>Text</type>
</CustomField>