force-app/main/default/objects/Oportunidad__c/fields/Clasificacion_funcional_Nivel_3__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion_funcional_Nivel_3__c</fullName>
    <label>Clasificación funcional - Nivel 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>