force-app/main/default/objects/Oportunidad__c/fields/Clasificacion_tecnologica_Nivel_1__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion_tecnologica_Nivel_1__c</fullName>
    <label>Clasificación tecnológica - Nivel 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>