force-app/main/default/objects/Oportunidad__c/fields/Clasificacion_tecnologica_Nivel_2__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion_tecnologica_Nivel_2__c</fullName>
    <label>Clasificación tecnológica - Nivel 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>