force-app/main/default/objects/Oportunidad__c/fields/Cloud_On_premise__c.field-meta.xml
<CustomField>
    <fullName>Cloud_On_premise__c</fullName>
    <label>Cloud / On-premise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>On-premise</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>