force-app/main/default/objects/Oportunidad__c/fields/Codigo_Area_Con_Tecnologica__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Area_Con_Tecnologica__c</fullName>
    <label>Codigo Area Con Tecnologica</label>
    <length>50</length>
    <type>Text</type>
</CustomField>