force-app/main/default/objects/Oportunidad__c/fields/Codigo_CCI__c.field-meta.xml
<CustomField>
    <fullName>Codigo_CCI__c</fullName>
    <label>Codigo CCI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>