force-app/main/default/objects/Oportunidad__c/fields/Codigo_CR_Super__c.field-meta.xml
<CustomField>
    <fullName>Codigo_CR_Super__c</fullName>
    <label>Codigo CR Super</label>
    <length>50</length>
    <type>Text</type>
</CustomField>