force-app/main/default/objects/Oportunidad__c/fields/Codigo_FICEPI_GP__c.field-meta.xml
<CustomField>
    <fullName>Codigo_FICEPI_GP__c</fullName>
    <label>Codigo FICEPI Gestor Produccion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>