force-app/main/default/objects/Oportunidad__c/fields/Codigo_OC2__c.field-meta.xml
<CustomField>
    <fullName>Codigo_OC2__c</fullName>
    <label>Sale Opportunity Code Old</label>
    <length>20</length>
    <type>Text</type>
</CustomField>