force-app/main/default/objects/Oportunidad__c/fields/Codigo_OC_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Codigo_OC_Relacionada__c</fullName>
    <description>Muestra el código de la oportunidad relacionada si la tuviera. Si no muestra el propio código de la oportunidad
Se utiliza para la subida de documentación a Power Alejandría</description>
    <formula>IF(NOT(ISBLANK(Oportunidad_Relacionada__r.Codigo_OC__c)), Oportunidad_Relacionada__r.Codigo_OC__c, Codigo_OC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo OC Relacionada</label>
    <type>Text</type>
</CustomField>