force-app/main/default/objects/Oportunidad__c/fields/Codigo_Oferta_Super__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Oferta_Super__c</fullName>
    <label>Código Oferta Súper</label>
    <length>50</length>
    <type>Text</type>
</CustomField>