force-app/main/default/objects/Oportunidad__c/fields/Codigo_Org_Comercial_IB__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Org_Comercial_IB__c</fullName>
    <label>Codigo Org Comercial IB</label>
    <length>50</length>
    <type>Text</type>
</CustomField>