force-app/main/default/objects/Oportunidad__c/fields/Comentario_Siguiente_Paso__c.field-meta.xml
<CustomField>
    <fullName>Comentario_Siguiente_Paso__c</fullName>
    <label>Comentario Siguiente Paso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>