force-app/main/default/objects/Oportunidad__c/fields/Composicion_UTE__c.field-meta.xml
<CustomField>
    <fullName>Composicion_UTE__c</fullName>
    <label>Composición UTE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>