force-app/main/default/objects/Oportunidad__c/fields/Contacto_implantacion__c.field-meta.xml
<CustomField>
    <fullName>Contacto_implantacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto implantación</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Cliente__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades (Contacto implantación)</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>