force-app/main/default/objects/Oportunidad__c/fields/Contratado_a_o_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Contratado_a_o_oportunidad__c</fullName>
    <inlineHelpText>Contracted year opportunity is the part of the contract that is applicable to Ayesa during the present year.</inlineHelpText>
    <label>Importe Contratado Año (€) (Importe SAP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>