force-app/main/default/objects/Oportunidad__c/fields/Costes__c.field-meta.xml
<CustomField>
    <fullName>Costes__c</fullName>
    <label>Costes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>