force-app/main/default/objects/Oportunidad__c/fields/CPV__c.field-meta.xml
<CustomField>
    <fullName>CPV__c</fullName>
    <inlineHelpText>CPV (Common Procurement Vocabulary - Vocabulario Común de Contratación Pública) es un sistema de identificación y categorización de todas las actividades económicas susceptibles de ser contratadas mediante licitación o concurso público en la Unión Europea. Si no se tiene, escribir No Aplica</inlineHelpText>
    <label>CPV</label>
    <length>10</length>
    <type>Text</type>
</CustomField>