force-app/main/default/objects/Oportunidad__c/fields/CPV_varios__c.field-meta.xml
<CustomField>
    <fullName>CPV_varios__c</fullName>
    <inlineHelpText>CPV es un sistema de identificación y categorización de todas las actividades económicas susceptibles de ser contratadas mediante licitación o concurso público en la Unión Europea. Elija uno o varios valores.</inlineHelpText>
    <label>CPV varios</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>