force-app/main/default/objects/Oportunidad__c/fields/CR_Super__c.field-meta.xml
<CustomField>
    <fullName>CR_Super__c</fullName>
    <label>CR Super</label>
    <length>255</length>
    <type>Text</type>
</CustomField>