force-app/main/default/objects/Oportunidad__c/fields/Creador_Oportunidad_es_IS__c.field-meta.xml
<CustomField>
    <fullName>Creador_Oportunidad_es_IS__c</fullName>
    <formula>AND(
				CONTAINS(	Record_Type_Name__c , &apos;SME&apos;),
		  		OR(CONTAINS(CreatedBy.UserRole.Name, &apos;IS &apos;),
							Creadas_SME_IS_Clip__c =true)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creador Oportunidad es IS</label>
    <type>Checkbox</type>
</CustomField>