force-app/main/default/objects/Oportunidad__c/fields/CSO__c.field-meta.xml
<CustomField>
    <fullName>CSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades8_del</relationshipName>
    <type>Lookup</type>
</CustomField>