force-app/main/default/objects/Oportunidad__c/fields/Decision_Aprobacion_Oferta__c.field-meta.xml
<CustomField>
    <fullName>Decision_Aprobacion_Oferta__c</fullName>
    <label>Decisión Aprobación Oferta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>No aprobado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>