force-app/main/default/objects/Oportunidad__c/fields/Decision_Oferta_Smart_BPM_Offer__c.field-meta.xml
<CustomField>
    <fullName>Decision_Oferta_Smart_BPM_Offer__c</fullName>
    <label>Decision Oferta Smart BPM Offer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>